--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lost-pixel",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "lost-pixel": "2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
