test: testing regression button story book with lost-pixel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["lostpixel.config.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
