--- a/.github/workflows/lost-pixel-update.yml
+++ b/.github/workflows/lost-pixel-update.yml
@@ -22,10 +22,10 @@ jobs:
 
       - name: Run Lost Pixel Container
         id: lp
-        uses: lost-pixel/lost-pixel@v2.11.0
-        env:
-          LOST_PIXEL_MODE: update
+        uses: lost-pixel/lost-pixel@v3.8.2
 
+        env:
+          LOST_PIXEL_API_KEY: ${{ secrets.LOST_PIXEL_API_KEY }}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         if: ${{ failure() && steps.lp.conclusion == 'failure' }}
