--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "lost-pixel": "2.11.0",
+    "lost-pixel": "^3.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
